[package]
name = "autumn-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = {version = "0.15.0", features = ["asio"]}
eyre = "0.6.8"
hound = "3.5.0"
iced = "0.8.0"
rfd = "0.11.1"
serde = "1.0.152"
